--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
   },
   "dependencies": {
     "1-liners": "^0.3.5",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "react-hammerjs": "^0.4.0",
     "react-motion": "^0.3.0"
   }
